--- a/projet/tests/CACLA_Tracking.ipynb
+++ b/projet/tests/CACLA_Tracking.ipynb
@@ -18,25 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "48fd7631-77d8-4e1e-a343-c99e625384b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import gym\n",
-    "import numpy as np\n",
-    "import random\n",
-    "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
-    "import torch.nn as nn\n",
     "import sys\n",
-    " \n",
-    "# ajout de la classe Tracking\n",
-    "sys.path.insert(0, '../')\n",
-    "from Tracking import Tracking"
+    "\n",
+    "sys.path.insert(0, '../class')\n",
+    "from utils.Tracking import Tracking\n",
+    "from utils.Critic import CriticNetwork\n",
+    "from utils.Actor import ActorNetwork\n",
+    "from utils.CACLA import CACLA"
    ]
   },
   {
@@ -49,23 +44,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f865bfd1-ac16-46dc-a3de-e7b1102b6030",
    "metadata": {},
    "outputs": [],
    "source": [
-    "observation_space = 4\n",
-    "action_space = 2\n",
+    "env = Tracking()\n",
+    "actor_network = ActorNetwork(\n",
+    "    nb_neurons = 12,\n",
+    "    action_space = env.action_space,\n",
+    "    observation_space = env.observation_space\n",
+    ")\n",
     "\n",
-    "discount_factor = 0.99\n",
-    "learning_rate_critic =   2.5e-4  # 3e-2  \n",
-    "learning_rate_actor =  8.5e-4\n",
-    "sigma = [0.1,0.1]\n",
-    "beta = 0.001\n",
-    "var_0 = 1\n",
-    "nb_episode = 2000\n",
-    "test_frequency = 10\n",
-    "nb_tests = 1"
+    "critic_network = CriticNetwork(\n",
+    "    nb_neurons = 12,\n",
+    "    observation_space = env.observation_space\n",
+    ")\n",
+    "\n",
+    "cacla = CACLA(\n",
+    "    learning_rate_critic = 0.1,\n",
+    "    learning_rate_actor = 0.1,\n",
+    "    discount_factor = 0.9,\n",
+    "    sigma = 0.1,\n",
+    "    nb_episode = 2000,\n",
+    "    test_frequency = 10,\n",
+    "    env = env,\n",
+    "    actor_network = actor_network,\n",
+    "    critic_network = critic_network,\n",
+    ")"
    ]
   },
   {
@@ -79,130 +85,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8592e869-7320-43b3-8501-862fee0efc47",
+   "id": "dc171ea5-bf23-4217-b00c-051db8c9a8e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = Tracking()\n",
-    "env.reset()\n",
-    "\n",
-    "class ActorNetwork(nn.Module) :\n",
-    "    \n",
-    " \n",
-    "    def __init__(self) -> None:\n",
-    "        super().__init__()\n",
-    "\n",
-    "\n",
-    "        self.net = nn.Sequential(\n",
-    "            nn.Linear(observation_space, 64),\n",
-    "            nn.Sigmoid(),\n",
-    "            nn.Linear(64, 12),\n",
-    "            nn.Sigmoid(),\n",
-    "            nn.Linear(12,action_space)\n",
-    "        )\n",
-    "\n",
-    "    def forward(self,x):\n",
-    "        return self.net(x)\n",
-    "    \n",
-    "    \n",
-    "class CriticNetwork(nn.Module) :\n",
-    "    \n",
-    "    def __init__(self) -> None:\n",
-    "        super().__init__()\n",
-    "\n",
-    "\n",
-    "        self.net = nn.Sequential(\n",
-    "            nn.Linear(observation_space, 12),\n",
-    "            nn.Sigmoid(),\n",
-    "            nn.Linear(12,1)\n",
-    "        )\n",
-    "\n",
-    "    def forward(self,x):\n",
-    "        return self.net(x)\n",
-    "\n",
-    "def test(actor) : \n",
-    "    cum_rewards = list()\n",
-    "    state = env.reset()\n",
-    "    done = False\n",
-    "    while not done :\n",
-    "        state_t = torch.as_tensor(state , dtype=torch.float32)\n",
-    "        action =  actor(state_t).detach().numpy()\n",
-    "        new_state, reward, done = env.step(action)\n",
-    "        cum_rewards.append(reward)\n",
-    "        state = new_state\n",
-    "    return sum(cum_rewards) / len(cum_rewards)\n",
-    "\n",
-    "\n",
-    "actor = ActorNetwork()\n",
-    "critic = CriticNetwork()\n",
-    "\n",
-    "best_model = ActorNetwork()\n",
-    "best_value = -1e10\n",
-    "\n",
-    "optimizer_critic = torch.optim.Adam(critic.parameters(),lr=learning_rate_critic)\n",
-    "\n",
-    "list_rewards_mean_4 = list()\n",
-    "list_rewards_std_4 = list()\n",
-    "\n",
-    "for episode in tqdm(range(nb_episode)) : \n",
-    "    \n",
-    "    var = var_0\n",
-    "    \n",
-    "    state = env.reset()\n",
-    "\n",
-    "    done = False\n",
-    "    \n",
-    "    while not done :\n",
-    "        \n",
-    "        state_t = torch.as_tensor(state , dtype=torch.float32)\n",
-    "        \n",
-    "        action = torch.as_tensor(np.array(np.random.normal(loc=actor(state_t).detach().numpy(),scale=sigma,size=(1,action_space))),dtype=torch.float32)[0].detach().numpy()\n",
-    "       \n",
-    "        new_state, reward, done = env.step(action)\n",
-    "        \n",
-    "        new_state_t = torch.as_tensor(new_state , dtype=torch.float32)\n",
-    "        reward_t = torch.as_tensor(reward , dtype=torch.float32)\n",
-    "        \n",
-    "        \n",
-    "        with torch.no_grad():\n",
-    "            td_error = reward_t + discount_factor * (1 - done) * critic(new_state_t) - critic(state_t)\n",
-    "        \n",
-    "        # learning critic\n",
-    "        loss_critic = - td_error.detach() * critic(state_t)\n",
-    "\n",
-    "        optimizer_critic.zero_grad()\n",
-    "        loss_critic.backward()\n",
-    "        optimizer_critic.step()\n",
-    "        \n",
-    "        if td_error > 0 :\n",
-    "            \n",
-    "            optimizer_actor = torch.optim.Adam(actor.parameters(),lr=learning_rate_actor)\n",
-    "            action_t = torch.as_tensor(action , dtype=torch.float32)\n",
-    "            \n",
-    "            # learning actor\n",
-    "            loss_actor = ( (action_t - actor(state_t).detach()) * actor(state_t) ).mean()\n",
-    "\n",
-    "            optimizer_actor.zero_grad()\n",
-    "            loss_actor.backward()\n",
-    "            optimizer_actor.step()\n",
-    "        \n",
-    "        state = new_state\n",
-    "        \n",
-    "    if episode % test_frequency == 0 :    \n",
-    "        list_tests = list()\n",
-    "        for t in range(nb_tests) :\n",
-    "            list_tests.append(test(actor))\n",
-    "            \n",
-    "        list_tests = np.array(list_tests)\n",
-    "        \n",
-    "        print(f\"test episode : {episode} - mean value : {list_tests.mean()} - best value : {best_value}\")\n",
-    "\n",
-    "        if list_tests.mean() > best_value :\n",
-    "            best_value = list_tests.mean()\n",
-    "            best_model.load_state_dict(actor.state_dict())\n",
-    "        \n",
-    "        list_rewards_mean_4.append( list_tests.mean() )\n",
-    "        list_rewards_std_4.append( list_tests.std() )"
+    "cacla.learning()"
    ]
   },
   {
@@ -216,15 +103,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "052dcf17-3441-46aa-bb83-00e0f1a055b8",
+   "id": "9eba641e-511d-4460-a301-354d2fa551b3",
    "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(10,7))\n",
-    "list_mean1_4 = np.array(list_rewards_mean_4) + np.array(list_rewards_std_4)\n",
-    "list_mean2_4 = np.array(list_rewards_mean_4) - np.array(list_rewards_std_4)\n",
-    "plt.fill_between(np.arange(0,nb_episode,test_frequency),list_mean1_4,list_mean2_4, color = 'salmon', label = 'std reward')\n",
-    "plt.plot(np.arange(0,nb_episode,test_frequency),list_rewards_mean_4, c= 'r',label = 'mean reward')\n",
+    "plt.plot(cacla.list_rewards, c= 'r',label = 'rewards')\n",
     "plt.legend()\n",
     "plt.xlabel('episode')\n",
     "plt.ylabel('reward')\n",
@@ -243,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2acc0371-ea05-4997-91ab-86631c5fe0a3",
+   "id": "59302b44-9de9-4259-b3d0-fcb54554e11c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +143,7 @@
     "r = 0.0\n",
     "while not done :\n",
     "    state_t = torch.as_tensor(state , dtype=torch.float32)\n",
-    "    action =  best_model(state_t).detach().numpy()\n",
+    "    action =  cacla.best_model(state_t).detach().numpy()\n",
     "    new_state, reward, done = env.step(action)\n",
     "    r += reward\n",
     "    list_x_agent.append(env.agent[0])\n",
@@ -304,7 +188,7 @@
     "iteration = 0\n",
     "while not done :\n",
     "    state_t = torch.as_tensor(state , dtype=torch.float32)\n",
-    "    action =  best_model(state_t).detach().numpy()\n",
+    "    action =  cacla.best_model(state_t).detach().numpy()\n",
     "    new_state, reward, done = env.step(action)\n",
     "    state = new_state\n",
     "    iteration += 1\n",
