--- a/projet/tests/CAC_Global_testing_Tracking.ipynb
+++ b/projet/tests/CAC_Global_testing_Tracking.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "Ce notebook permet de comparer les résultats des algorithmes **CAC**,**CACLA** et **CACLA+VAR** avec une stratégie d'exploration gaussienne et $\\epsilon$-greedy sur l'environnement **Tracking** du papier  https://www.researchgate.net/publication/4249966_Reinforcement_Learning_in_Continuous_Action_Spaces/link/0912f5093a214c7f1b000000/download\n",
-    "Fait par "
+    "\n",
+    "Fait par Jérémy DUFOURMANTELLE et Ethan ABITBOL"
    ]
   },
   {
