--- a/projet/tests/CAC_Global_testing_Tracking.ipynb
+++ b/projet/tests/CAC_Global_testing_Tracking.ipynb
@@ -89,7 +89,7 @@
     "        verbose_mode = False\n",
     "    )\n",
     "    cac.learning()\n",
-    "    matrice_simulation_rewards_cac.append(cac.list_rewards)\n",
+    "    matrice_simulation_rewards_cac.append(cac.list_rewards_mean)\n",
     "    \n",
     "    state = env.reset()\n",
     "    done = False\n",
@@ -154,7 +154,7 @@
     "        verbose_mode = False\n",
     "    )\n",
     "    cacla.learning()\n",
-    "    matrice_simulation_rewards_cacla.append(cacla.list_rewards)\n",
+    "    matrice_simulation_rewards_cacla.append(cacla.list_rewards_mean)\n",
     "    \n",
     "    state = env.reset()\n",
     "    done = False\n",
@@ -219,7 +219,7 @@
     "        verbose_mode = False\n",
     "    )\n",
     "    caclavar.learning()\n",
-    "    matrice_simulation_rewards_caclavar.append(caclavar.list_rewards)\n",
+    "    matrice_simulation_rewards_caclavar.append(caclavar.list_rewards_mean)\n",
     "    \n",
     "    state = env.reset()\n",
     "    done = False\n",
@@ -383,7 +383,7 @@
     "        verbose_mode = False\n",
     "    )\n",
     "    cac.learning()\n",
-    "    matrice_simulation_rewards_cac.append(cac.list_rewards)\n",
+    "    matrice_simulation_rewards_cac.append(cac.list_rewards_mean)\n",
     "    \n",
     "    state = env.reset()\n",
     "    done = False\n",
@@ -448,7 +448,7 @@
     "        verbose_mode = False\n",
     "    )\n",
     "    cacla.learning()\n",
-    "    matrice_simulation_rewards_cacla.append(cacla.list_rewards)\n",
+    "    matrice_simulation_rewards_cacla.append(cacla.list_rewards_mean)\n",
     "    \n",
     "    state = env.reset()\n",
     "    done = False\n",
@@ -513,7 +513,7 @@
     "        verbose_mode = False\n",
     "    )\n",
     "    caclavar.learning()\n",
-    "    matrice_simulation_rewards_caclavar.append(caclavar.list_rewards)\n",
+    "    matrice_simulation_rewards_caclavar.append(caclavar.list_rewards_mean)\n",
     "    \n",
     "    state = env.reset()\n",
     "    done = False\n",
