--- a/projet/tests/CAC_Global_testing_Tracking.ipynb
+++ b/projet/tests/CAC_Global_testing_Tracking.ipynb
@@ -220,7 +220,7 @@
     "        discount_factor = 0.8,\n",
     "        sigma = 0.1,\n",
     "        nb_episode = 500,\n",
-    "        nb_tests = 3\n",
+    "        nb_tests = 3,\n",
     "        test_frequency = 1,\n",
     "        env = env,\n",
     "        actor_network = actor_network,\n",
@@ -290,9 +290,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l_cac = rewards_normalization(matrice_simulation_rewards)\n",
-    "l_cacla = rewards_normalization(matrice_simulation_rewards)\n",
-    "l_caclavar = rewards_normalization(matrice_simulation_rewards)"
+    "l_cac = rewards_normalization(matrice_simulation_rewards_cac)\n",
+    "l_cacla = rewards_normalization(matrice_simulation_rewards_cacla)\n",
+    "l_caclavar = rewards_normalization(matrice_simulation_rewards_caclavar)"
    ]
   },
   {
@@ -454,7 +454,7 @@
     "        env = env,\n",
     "        actor_network = actor_network,\n",
     "        critic_network = critic_network,\n",
-    "        exploration_strategy = \"greedy\",\n",
+    "        exploration_strategy = \"egreedy\",\n",
     "        verbose_mode = False\n",
     "    )\n",
     "    cacla.learning()\n",
@@ -514,12 +514,12 @@
     "        discount_factor = 0.9,\n",
     "        sigma = 0.1,\n",
     "        nb_episode = 500,\n",
-    "        nb_tests = 3\n",
+    "        nb_tests = 3,\n",
     "        test_frequency = 1,\n",
     "        env = env,\n",
     "        actor_network = actor_network,\n",
     "        critic_network = critic_network,\n",
-    "        exploration_strategy = \"greedy\",\n",
+    "        exploration_strategy = \"egreedy\",\n",
     "        verbose_mode = False\n",
     "    )\n",
     "    caclavar.learning()\n",
@@ -584,9 +584,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l_cac = rewards_normalization(matrice_simulation_rewards)\n",
-    "l_cacla = rewards_normalization(matrice_simulation_rewards)\n",
-    "l_caclavar = rewards_normalization(matrice_simulation_rewards)"
+    "l_cac = rewards_normalization(matrice_simulation_rewards_cac)\n",
+    "l_cacla = rewards_normalization(matrice_simulation_rewards_cacla)\n",
+    "l_caclavar = rewards_normalization(matrice_simulation_rewards_caclavar)"
    ]
   },
   {
