--- a/projet/tests/CAC_Global_testing_Tracking.ipynb
+++ b/projet/tests/CAC_Global_testing_Tracking.ipynb
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ec93ba91-7d51-4134-af60-79ec53aa133a",
+   "execution_count": null,
+   "id": "9218e760-3504-4bbf-83e1-b89ba69a98f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70c64082-9c5b-4aa6-9998-cc87a9120f30",
+   "id": "e5a52176-3507-47a6-ade5-3145ef28340e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41328cf4-e38a-424e-968a-16206d7fa9f6",
+   "id": "94d0c013-c20a-4fdd-9f7a-67a84dea0031",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +72,7 @@
     "nb_tests = nb_tests_global\n",
     "\n",
     "matrice_simulation_rewards_cac = list()\n",
+    "matrice_simulation_iteration_cac = list()\n",
     "\n",
     "for i in tqdm(range(nb_tests)) : \n",
     "    env = Tracking()\n",
@@ -88,6 +89,9 @@
     "        learning_rate_critic = 0.01,\n",
     "        learning_rate_actor = 0.01,\n",
     "        discount_factor = 0.9,\n",
+    "        epsilon = 1.0,\n",
+    "        epsilon_min = 0.01,\n",
+    "        epsilon_decay = 0.01,\n",
     "        sigma = 0.1,\n",
     "        nb_episode = 500,\n",
     "        nb_tests = 3,\n",
@@ -100,6 +104,7 @@
     "    )\n",
     "    cac.learning()\n",
     "    matrice_simulation_rewards_cac.append(cac.list_rewards_mean)\n",
+    "    matrice_simulation_iteration_cac.append(cac.list_iteration)\n",
     "    \n",
     "    state = env.reset()\n",
     "    done = False\n",
@@ -128,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f505d3c3-470f-4f05-8c76-ba17f7dc2e36",
+   "id": "fc21cc36-744f-4fc3-a6be-d49794a4b127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,6 +142,7 @@
     "nb_tests = nb_tests_global\n",
     "\n",
     "matrice_simulation_rewards_cacla = list()\n",
+    "matrice_simulation_iteration_cacla = list()\n",
     "\n",
     "for i in tqdm(range(nb_tests)) : \n",
     "    env = Tracking()\n",
@@ -153,6 +159,9 @@
     "        learning_rate_critic = 0.01,\n",
     "        learning_rate_actor = 0.01,\n",
     "        discount_factor = 0.95,\n",
+    "        epsilon = 1.0,\n",
+    "        epsilon_min = 0.01,\n",
+    "        epsilon_decay = 0.01,\n",
     "        sigma = 0.1,\n",
     "        nb_episode = 500,\n",
     "        nb_tests = 3,\n",
@@ -163,8 +172,10 @@
     "        exploration_strategy = \"gaussian\",\n",
     "        verbose_mode = False\n",
     "    )\n",
+    "    \n",
     "    cacla.learning()\n",
     "    matrice_simulation_rewards_cacla.append(cacla.list_rewards_mean)\n",
+    "    matrice_simulation_iteration_cacla.append(cacla.list_iteration)\n",
     "    \n",
     "    state = env.reset()\n",
     "    done = False\n",
@@ -193,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4c602e0-ce70-4bbb-9b62-17b08676e070",
+   "id": "e8b0f226-e5bf-4bd1-a042-38e8fc09405d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,6 +213,7 @@
     "nb_tests = nb_tests_global\n",
     "\n",
     "matrice_simulation_rewards_caclavar = list()\n",
+    "matrice_simulation_iteration_caclavar = list()\n",
     "\n",
     "for i in tqdm(range(nb_tests)) : \n",
     "    env = Tracking()\n",
@@ -218,6 +230,9 @@
     "        learning_rate_critic = 0.01,\n",
     "        learning_rate_actor = 0.01,\n",
     "        discount_factor = 0.8,\n",
+    "        epsilon = 1.0,\n",
+    "        epsilon_min = 0.01,\n",
+    "        epsilon_decay = 0.01,\n",
     "        sigma = 0.1,\n",
     "        nb_episode = 500,\n",
     "        nb_tests = 3,\n",
@@ -230,6 +245,7 @@
     "    )\n",
     "    caclavar.learning()\n",
     "    matrice_simulation_rewards_caclavar.append(caclavar.list_rewards_mean)\n",
+    "    matrice_simulation_iteration_caclavar.append(caclavar.list_iteration)\n",
     "    \n",
     "    state = env.reset()\n",
     "    done = False\n",
@@ -250,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6af99b21-a6f2-4d60-a98d-3a783d5aacdd",
+   "id": "2e08c499-36bf-47f8-aafc-f0dfa462f58d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6085708-afe6-4202-b35e-8b32086ded13",
+   "id": "aa14a69a-2ac9-444c-9ed2-011b76255dd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71f2f197-e0a9-4af3-97c9-01fc3429f9e5",
+   "id": "ed27a8c8-8c09-4d52-9300-c6083a86a9a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +314,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "412220ee-2606-4109-aa84-a902aeb523ef",
+   "id": "c01d6867-d2dd-4fac-aac9-65639f3795e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m_iter_caclavar = np.array(matrice_simulation_iteration_caclavar)\n",
+    "x_iter_caclavar = m_iter_caclavar.mean(axis=0)\n",
+    "\n",
+    "m_iter_cacla = np.array(matrice_simulation_iteration_cacla)\n",
+    "x_iter_cacla = m_iter_cacla.mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "957000ff-6dce-47be-bf0b-f74cee966477",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,13 +349,23 @@
     "plt.plot(l_cacla, label=\"rewards CACLA\")\n",
     "plt.plot(l_caclavar, label=\"rewards CACLAVAR\")\n",
     "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(5,11))\n",
+    "plt.title(f\"evolution of the rewards with {nb_tests} simulations and gaussian exploration on Tracking\")\n",
+    "plt.xlabel(\"iteration\")\n",
+    "plt.ylabel(\"rewards normalized between 0 and 1\")\n",
+    "plt.plot(x_iter_cacla,l_cacla, label=\"rewards CACLA\")\n",
+    "plt.plot(x_iter_caclavar,l_caclavar, label=\"rewards CACLAVAR\")\n",
+    "plt.xticks([0,51200,102400])\n",
+    "plt.legend()\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bf48ad7-aba5-4035-82b9-633eb3eb1fe0",
+   "id": "6db4f196-6f96-4759-bb15-b38aa0def4af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "752713a3-f273-4ae6-a98d-4953d9633232",
+   "id": "4c098b10-9cc6-4781-a24d-8a415edaa158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,6 +406,7 @@
     "nb_tests = nb_tests_global\n",
     "\n",
     "matrice_simulation_rewards_cac = list()\n",
+    "matrice_simulation_iteration_cac = list()\n",
     "\n",
     "for i in tqdm(range(nb_tests)) : \n",
     "    env = Tracking()\n",
@@ -382,6 +423,9 @@
     "        learning_rate_critic = 0.01,\n",
     "        learning_rate_actor = 0.01,\n",
     "        discount_factor = 0.9,\n",
+    "        epsilon = 1.0,\n",
+    "        epsilon_min = 0.01,\n",
+    "        epsilon_decay = 0.01,\n",
     "        sigma = 0.1,\n",
     "        nb_episode = 500,\n",
     "        nb_tests = 3,\n",
@@ -394,6 +438,7 @@
     "    )\n",
     "    cac.learning()\n",
     "    matrice_simulation_rewards_cac.append(cac.list_rewards_mean)\n",
+    "    matrice_simulation_iteration_cac.append(cac.list_iteration)\n",
     "    \n",
     "    state = env.reset()\n",
     "    done = False\n",
@@ -422,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b2fd056-eafe-463f-b21c-b81b3d8a567e",
+   "id": "98c51537-b755-4541-aa0e-0c0edf29fc36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,6 +476,7 @@
     "nb_tests = nb_tests_global\n",
     "\n",
     "matrice_simulation_rewards_cacla = list()\n",
+    "matrice_simulation_iteration_cacla = list()\n",
     "\n",
     "for i in tqdm(range(nb_tests)) : \n",
     "    env = Tracking()\n",
@@ -447,6 +493,9 @@
     "        learning_rate_critic = 0.01,\n",
     "        learning_rate_actor = 0.01,\n",
     "        discount_factor = 0.95,\n",
+    "        epsilon = 1.0,\n",
+    "        epsilon_min = 0.01,\n",
+    "        epsilon_decay = 0.01,\n",
     "        sigma = 0.1,\n",
     "        nb_episode = 500,\n",
     "        nb_tests = 3,\n",
@@ -459,6 +508,7 @@
     "    )\n",
     "    cacla.learning()\n",
     "    matrice_simulation_rewards_cacla.append(cacla.list_rewards_mean)\n",
+    "    matrice_simulation_iteration_cacla.append(cacla.list_iteration)\n",
     "    \n",
     "    state = env.reset()\n",
     "    done = False\n",
@@ -487,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7769f568-a42e-4d64-84a0-bb4359b43833",
+   "id": "8061d2a0-2b94-480b-97ce-1e2edc4f1c7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,6 +546,7 @@
     "nb_tests = nb_tests_global\n",
     "\n",
     "matrice_simulation_rewards_caclavar = list()\n",
+    "matrice_simulation_iteration_caclavar = list()\n",
     "\n",
     "for i in tqdm(range(nb_tests)) : \n",
     "    env = Tracking()\n",
@@ -512,6 +563,9 @@
     "        learning_rate_critic = 0.01,\n",
     "        learning_rate_actor = 0.01,\n",
     "        discount_factor = 0.9,\n",
+    "        epsilon = 1.0,\n",
+    "        epsilon_min = 0.01,\n",
+    "        epsilon_decay = 0.01,\n",
     "        sigma = 0.1,\n",
     "        nb_episode = 500,\n",
     "        nb_tests = 3,\n",
@@ -524,6 +578,7 @@
     "    )\n",
     "    caclavar.learning()\n",
     "    matrice_simulation_rewards_caclavar.append(caclavar.list_rewards_mean)\n",
+    "    matrice_simulation_iteration_caclavar.append(caclavar.list_iteration)\n",
     "    \n",
     "    state = env.reset()\n",
     "    done = False\n",
@@ -544,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ed2a94e-da59-4789-915b-8369af7bfa18",
+   "id": "f7615d1f-3272-4576-a794-ce4cf7b6c727",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da1cee68-bddc-4795-b3c7-7a2c5bcc0687",
+   "id": "035235fd-0936-4f44-9627-a973a683a7ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13665912-6ae2-48f9-a6ff-28ae4752e9d2",
+   "id": "de902cd6-63b8-42a5-a68e-42d978f37377",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +647,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa8d3498-5c2b-4be8-8642-863c2769715a",
+   "id": "94565f91-c7a2-423a-bc70-73dc9b0b5060",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m_iter_caclavar = np.array(matrice_simulation_iteration_caclavar)\n",
+    "x_iter_caclavar = m_iter_caclavar.mean(axis=0)\n",
+    "\n",
+    "m_iter_cacla = np.array(matrice_simulation_iteration_cacla)\n",
+    "x_iter_cacla = m_iter_cacla.mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9faf886b-5cd3-4e91-9e0c-756e67f9bd3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,13 +682,23 @@
     "plt.plot(l_cacla, label=\"rewards CACLA\")\n",
     "plt.plot(l_caclavar, label=\"rewards CACLAVAR\")\n",
     "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(5,11))\n",
+    "plt.title(f\"evolution of the rewards with {nb_tests} simulations and egreedy exploration on Tracking\")\n",
+    "plt.xlabel(\"iteration\")\n",
+    "plt.ylabel(\"rewards normalized between 0 and 1\")\n",
+    "plt.plot(x_iter_cacla,l_cacla, label=\"rewards CACLA\")\n",
+    "plt.plot(x_iter_caclavar,l_caclavar, label=\"rewards CACLAVAR\")\n",
+    "plt.xticks([0,51200,102400])\n",
+    "plt.legend()\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d162ce6f-b913-4c1f-b05e-838216f8dadc",
+   "id": "3ada48e0-d266-4c63-9f07-81198f873810",
    "metadata": {},
    "outputs": [],
    "source": [
